Remove jvm-opts